crates/connectors/ndc-cockroach/tests/snapshots/query_tests__sorting__select_order_by_album_artist_name.snap
---
source: crates/connectors/ndc-cockroach/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "Bad Boy Boogie"
      },
      {
        "Name": "Breaking The Rules"
      },
      {
        "Name": "C.O.D."
      },
      {
        "Name": "Dog Eat Dog"
      },
      {
        "Name": "Evil Walks"
      }
    ]
  }
]
