crates/connectors/ndc-cockroach/tests/snapshots/query_tests__sorting__select_track_order_by_artist_id_and_album_title.snap
---
source: crates/connectors/ndc-cockroach/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "Breaking The Rules"
      },
      {
        "Name": "C.O.D."
      },
      {
        "Name": "Evil Walks"
      },
      {
        "Name": "For Those About To Rock (We Salute You)"
      },
      {
        "Name": "Inject The Venom"
      }
    ]
  }
]
