crates/connectors/ndc-cockroach/tests/snapshots/query_tests__sorting__sorting_by_relationship_count_with_predicate.snap
---
source: crates/connectors/ndc-cockroach/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Name": "Iron Maiden"
      },
      {
        "Name": "Metallica"
      },
      {
        "Name": "U2"
      },
      {
        "Name": "Led Zeppelin"
      },
      {
        "Name": "Deep Purple"
      }
    ]
  }
]
